# nomad-oasis-ikz

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
